--- a/index.ipynb
+++ b/index.ipynb
@@ -203,7 +203,7 @@
    ],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "     if len(restaurant['price']) < ealternative['price']:\n",
+    "     if len(restaurant['price']) < len(alternative['price']:\n",
     "        return restaurant\n",
     "    else:\n",
     "        return alternative"
