Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,7 @@
     "def open_restaurants(restaurants):\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == false:\n",
-    "            return restau"
+    "            return restaurant"
    ]
   },
   {
