--- a/index.ipynb
+++ b/index.ipynb
@@ -289,6 +289,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
+    "    upe\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False:\n",
     "            return restaurant"
