--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,7 @@
     "    still_open = []\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False:\n",
-    "            return restaurant"
+    "            still_open +="
    ]
   },
   {
