--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,7 @@
     "    still_open = []\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False:\n",
-    "            still_open.append(restaurant(restaurants))"
+    "            still_open.append(restaurants))"
    ]
   },
   {
