Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,8 @@
     "    still_open = []\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False:\n",
-    "            still_open.append(restaurant)"
+    "            still_open.append(restaurant)\n",
+    "            "
    ]
   },
   {
