Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -293,7 +293,7 @@
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False:\n",
     "            still_open.append(restaurant)\n",
-    "            "
+    "    return still_opo"
    ]
   },
   {
